package com.Vlad_ko.Simulation.Action;

public interface Action {
    void execute();
}
