package com.Vlad_ko.Simulation.Behavior;

import com.Vlad_ko.Simulation.Core.GameMap;
import com.Vlad_ko.Simulation.Core.SimulationSettings;

public interface Movable {
    void move(SimulationSettings settings);
}
