package com.Vlad_ko.Simulation.Entity.Item.Edible;

public enum EdibleItemType {
    CORN_COB,
    RICE_EARS,
    TOMATO
}
