package com.Vlad_ko.Simulation.Utils;

import java.util.Objects;

public class Coordinates {
    public int getX() {
        return x;
    }

    public int getY() {
        return y;
    }

    private final int x, y;

    public Coordinates(int x, int y) {
        this.x = x;
        this.y = y;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Coordinates that = (Coordinates) o;
        return x == that.x && y == that.y;
    }

    @Override
    public int hashCode() {
        return Objects.hash(x, y);
    }
}